--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="utf-8">
     <title>XSL School</title>
     <script src="js/main.js"></script>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
-XSL School
+<form class="form">
+    <div class="form__cols">
+        <label class="form__label">
+            Set 1
+            <textarea placeholder="Paste set of parameters here..." class="form__textarea form__textarea_1"></textarea>
+        </label>
+        <label class="form__label">
+            Set 2
+            <textarea placeholder="Paste set of parameters here..." class="form__textarea form__textarea_2"></textarea>
+        </label>
+    </div>
+    <!--<input type="submit" value="Compare" class="form__submit">-->
+</form>
 
 </body>
 </html>
