--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">-->
     <title>XSL School</title>
+    <script src="js/zepto.min.js"></script>
+    <script src="js/underscore-min.js"></script>
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -13,28 +15,28 @@
 
     <h1>Please, enter two sets of parameters</h1>
 
-    <form class="form">
+    <div class="form">
         <label class="form__label">
             <textarea placeholder="Paste set of parameters here..." class="form__textarea form__textarea_1"></textarea>
         </label>
         <label class="form__label">
             <textarea placeholder="Paste set of parameters here..." class="form__textarea form__textarea_2"></textarea>
         </label>
-    </form>
+    </div>
 
     <div class="settings">
         <input type="checkbox" class="settings__checkbox" id="settings__checkbox_left">
         <label class="settings__label" for="settings__checkbox_left">Show unique on left</label>
         <input type="checkbox" class="settings__checkbox" id="settings__checkbox_equal">
         <label class="settings__label" for="settings__checkbox_equal">Show equal</label>
-        <input type="checkbox" class="settings__checkbox" id="settings__checkbox_diff" checked>
+        <input type="checkbox" class="settings__checkbox" id="settings__checkbox_diff">
         <label class="settings__label" for="settings__checkbox_diff">Show different</label>
         <input type="checkbox" class="settings__checkbox" id="settings__checkbox_right">
         <label class="settings__label" for="settings__checkbox_right">Show unique on right</label>
     </div>
 
     <div class="result">
-        <div class="result__item">
+        <!--<div class="result__item">
             <div class="result__item-block result__item-left result__item-unique">
                 <div class="result__item-name">param1</div>
                 <div class="result__item-value">some value of param</div>
@@ -93,7 +95,7 @@
                 <div class="result__item-name">param3</div>
                 <div class="result__item-value">some value of param</div>
             </div>
-        </div>
+        </div>-->
     </div>
 
 </div>
