--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>XSL School</title>
     <script src="js/zepto.min.js"></script>
     <script src="js/underscore-min.js"></script>
+    <script src="js/lib.js"></script>
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/main.css">
 </head>
