--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width>
     <title>XSL School</title>
     <script src="js/zepto.min.js"></script>
     <script src="js/underscore-min.js"></script>
