--- a/css.html
+++ b/css.html
@@ -2,9 +2,18 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>XSL School</title>
+    <link rel="stylesheet" href="css/main_2.css">
 </head>
 <body>
+
+<div class="wrapper">
+
+    <h1>Yandex test jobs</h1>
+
+
+</div>
 
 </body>
 </html>
