--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XSL School</title>
-    <link rel="stylesheet" href="css/main_2.css">
+    <link rel="stylesheet" href="css/1.css">
 </head>
 <body>
 
